WIP add Dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   </head>
 
   <body class="center-content height-100vh bg-primary">
-    <h1 class="welcome">Hello Student Companion App</h1>
+    <header class="header">
+      <h1 class="welcome">Hello Student Companion App</h1>
+    </header>
   </body>
 </html>
